welcome.lessons.welcome.loopfor.LoopStairs.scala.error
Runner:1: error: not found: value Pos
while (!Pos(8,14)) {
        ^