welcome.lessons.welcome.loopfor.LoopStairs.scala.code
while (!Pos(8,14)) {
	if (!estFaceMur()) {
		avance();
	} else {
		gauche();
		avance();
		droite();
	}
}

